--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -15,9 +15,9 @@
         </div>
     </div>
     <div class=" subHeaderContent">
-      <div class="col-md-9">
+      <div class="col-md-12">
       <div class="row">
-      <div class="col-md-10 col-xs-10">
+      <div class="col-md-10 col-xs-12 filter-content">
       <div class="filterOptions">
           <span role="button" class="filterItem" ng-click="filterByOwner();selectedOption ='all'" ng-class="{activeFilter: selectedOption =='all'}">All <span class="hidden-xs hiddenOnxs">Leads</span> </span>
           <span role="button" class="filterItem" ng-class="{activeFilter: selectedOption =='my'}" ng-click="filterByOwner('{{ME}}');selectedOption ='my'">My <span class="hidden-xs hiddenOnxs">Leads</span></span>
