--- a/templates/contacts/contact_show.html
+++ b/templates/contacts/contact_show.html
@@ -233,7 +233,7 @@
                         <ul class="list-unstyled contact-infos">
                           <li ng-show="showPhoneForm">
                                       <div class="row">
-                                        <form class="form-inline newLeadForm" role="form">
+                                         <form name="phoneform" class="form-inline newLeadForm" role="form">
                                           <div class="form-group sm-group" style="">
                                             <label class="sr-only" for="exampleInputPassword2">Type</label>
                                             <select ng-model="phone.type" class="form-control">
@@ -246,15 +246,21 @@
                                           <div class="form-group sm-group" style="">
                                             <label class="sr-only" for="exampleInputEmail2">Number</label>
                                             <input 
-                                            type="text" 
-                                            class="form-control" 
-                                            id="exampleInputEmail2" 
-                                            ng-model="phone.number" 
-                                            placeholder="Enter a number"
-                                            required 
-                                            ng-pattern="/^(?:(?:\(?(?:00|\+)([1-4]\d\d|[1-9]\d?)\)?)?[\-\.\ \\\/]?)?((?:\(?\d{1,}\)?[\-\.\ \\\/]?){0,})(?:[\-\.\ \\\/]?(?:#|ext\.?|extension|x)[\-\.\ \\\/]?(\d+))?$/i"
-                                            ng-focus="isFocused=true"
-                                            >
+                                                name="phonenumber" 
+                                                type="text"  
+                                                class="form-control" 
+                                                id="exampleInputEmail2" 
+                                                ng-model="phone.number" 
+                                                placeholder="Enter a number" 
+                                                required 
+                                                ng-pattern="/^(?:(?:\(?(?:00|\+)([1-4]\d\d|[1-9]\d?)\)?)?[\-\.\ \\\/]?)?((?:\(?\d{1,}\)?[\-\.\ \\\/]?){0,})(?:[\-\.\ \\\/]?(?:#|ext\.?|extension|x)[\-\.\ \\\/]?(\d+))?$/i"
+                                                ng-focus="isFocused=true">
+                                               <!--  <span class="error" ng-show="phoneform.phonenumber.$error.required">
+                                                    Required!
+                                                </span>
+                                                    <span class="error" ng-show="phoneform.phonenumber.$error.pattern">
+                                                  Not valid!
+                                                </span> -->
                                           </div>
                                            <button type="submit" ng-click="addPhone(phone)" class="btn blue jfk-button jfk-button-action">Add</button>
                                             <button type="submit" class="btn btn-default" ng-click="showPhoneForm=false">X</button>
@@ -310,7 +316,13 @@
                                         <form class="form-inline newLeadForm" role="form">
                                           <div class="form-group lg-group" style="">
                                             <label class="sr-only" for="exampleInputEmail2">Website</label>
-                                            <input type="text" ng-model="website.url" class="form-control" id="exampleInputEmail2" placeholder="Enter a Website">
+                                            <input 
+                                              type="url" 
+                                              ng-model="website.url" 
+                                              class="form-control" 
+                                              id="exampleInputEmail2" 
+                                              placeholder="Enter a Website"
+                                              required>
                                           </div>
                                       <button type="submit" ng-click="addWebsite(website)" class="btn blue jfk-button jfk-button-action">Add</button>
                                       <button type="submit" ng-click="showWebsiteForm=false" class="btn btn-default">X</button>
@@ -331,9 +343,17 @@
                                             <form class="form-inline newLeadForm" role="form">
                                               <div class="form-group lg-group" style="">
                                                 <label class="sr-only" for="exampleInputEmail2">Social link</label>
-                                                <input type="text" class="form-control" id="exampleInputEmail2" ng-model='sociallink.url' placeholder="Enter a social link">
+                                                <input 
+                                                  name="social"
+                                                  type="url" 
+                                                  class="form-control" 
+                                                  id="exampleInputEmail2" 
+                                                  ng-model='sociallink.url' 
+                                                  placeholder="Enter a social link"
+                                                  required>
                                               </div>
-                                               <button ng-click="addSocial(sociallink)" type="submit" class="btn blue jfk-button jfk-button-action">Add</button>
+                                               <button 
+                                                  ng-click="addSocial(sociallink)" type="submit" class="btn blue jfk-button jfk-button-action">Add</button>
                                                 <button type="submit" ng-click="showSociallinkForm=false" class="btn btn-default">X</button>
                                             </form>
                                           </div>
@@ -352,11 +372,21 @@
                                             <form class="form-inline newLeadForm" role="form">
                                               <div class="form-group sm-group" style="">
                                                 <label class="sr-only" for="exampleInputEmail2">Field</label>
-                                                <input type="text" class="form-control" id="exampleInputEmail2" ng-model="customfield.field" placeholder="Enter field name">
+                                                <input 
+                                                  type="text" 
+                                                  class="form-control" 
+                                                  id="exampleInputEmail2" 
+                                                  ng-model="customfield.field" placeholder="Enter field name"
+                                                  required>
                                               </div>
                                               <div class="form-group sm-group" style="">
                                                 <label class="sr-only" for="exampleInputEmail2">Value</label>
-                                                <input type="text" class="form-control" id="exampleInputEmail2" ng-model="customfield.value" placeholder="Enter a value">
+                                                <input 
+                                                  type="text" 
+                                                  class="form-control" 
+                                                  id="exampleInputEmail2" 
+                                                  ng-model="customfield.value" placeholder="Enter a value"
+                                                  required>
                                               </div>
                                                <button type="submit" class="btn blue jfk-button jfk-button-action" ng-click="addCustomField(customfield)">Add</button>
                                                 <button type="submit" class="btn btn-default" ng-click="showCustomFieldForm=false">X</button>
@@ -1190,7 +1220,7 @@
               <div class="modal-footer">
                   <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
 
-                  <input ng-hide="isLoading" ng-click="addAddress(address)" ng-disabled="!(address.country || address.postal_code || address.state || address.city || address.street)" type="submit" class="btn green" value="{{_('Add this address')}}">
+                  <input ng-hide="isLoading" ng-click="addAddress(address)" ng-disabled="(!address.country || !address.state || !address.city || !address.street)" type="submit" class="btn green" value="{{_('Add this address')}}">
                   <input ng-show="isLoading" type="submit" class="btn green" value="{{_('Loading...')}}" disabled>
               </div>
                 </form>
