--- a/templates/base.html
+++ b/templates/base.html
@@ -286,7 +286,7 @@
                 <p>An error has occured. Please try again</p>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn default" data-dismiss="modal">{{_("Close")}}</button>
+              <button type="button" class="btn default" data-dismiss="modal" ng-click="endError()">{{_("Close")}}</button>
             </div>
           </div>
           <!-- /.modal-content -->
