--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -194,7 +194,7 @@
                                                         <textarea id="noteBody" class="form-control ng-pristine ng-valid" rows="3" ng-model="note.content"></textarea>
                                                     </div>
                                                     <div class="pull-right">
-                                                        <input ng-disabled="isLoading" ng-click="addNote(note)"  type="submit" class="btn green" value="Add this note">
+                                                        <input ng-disabled="isLoading || !note.title" ng-click="addNote(note)"  type="submit" class="btn green" value="Add this note">
                                                     </div>
                                                 </form>
                                             </div>
@@ -1543,8 +1543,8 @@
                         <div class="modal-footer">
                             <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
 
-                            <input ng-hide="isLoading" type="submit" class="btn green" value="Create this document" ng-click="createDocument(newdocument)">
-                            <input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled>
+                            <input ng-hide="isLoading" type="submit" class="btn green" value="Create this document" ng-click="createDocument(newdocument)" ng-disabled="isLoading || !newdocument.title">
+                            <input ng-show="isLoading " type="submit" class="btn green" value="Loading..." disabled>
 
                             </form>
                         </div>
