--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -834,6 +834,12 @@
 
         </div>
       </div>
+      <script type="text/javascript">
+          $('.lead_related_events').slimScroll({
+                                    height: '160px'
+                                });
+
+      </script>
     </div>
   </div>
 
