--- a/templates/base.html
+++ b/templates/base.html
@@ -101,7 +101,7 @@
         <!-- END RESPONSIVE MENU TOGGLER -->
         <!-- BEGIN TOP NAVIGATION MENU -->
 
-        <ul class="nav navbar-nav pull-right" ng-controller="NavBarController">
+        <ul class="nav navbar-nav pull-right">
 
               <li id="chromeExtension" class="dropdown user chrome-ext hidden-xs"  >
 	                <input type="submit" onclick="$('#InstallChromeExtension').modal() " class="btn blue btn-block pull-right" value="Install chrome extension" style="padding-left:5px;padding-right:5px;">
@@ -377,16 +377,6 @@
    <link href="/static/angular-xeditable-0.1.8/css/xeditable.css" rel="stylesheet">
   <script src="/static/angular-xeditable-0.1.8/js/xeditable.js"></script>
    <script src="/static/app/scripts/vendor/ui-select2.js" ></script>
-   <script type="text/javascript">
-      function isMobile() {
-          var index = navigator.appVersion.indexOf("Mobile");
-          return (index > -1);
-        }
-        if (isMobile()) {
-          $(".chrome-ext").addClass("hidden");
-          $(".app-menu").addClass("hidden");
-        }
-   </script>
   <script type="text/javascript">
     var apisToLoad;
     var callback = function() {
@@ -430,6 +420,16 @@
       if (!window.location.hash){
           window.location.replace('{{active_app.url}}');
       };
+    }
+
+    var isMobile = navigator.appVersion.indexOf("Mobile") > -1;
+    var isChrome = navigator.userAgent.toLowerCase().indexOf('chrome') > -1;
+    if (isMobile || !isChrome) {
+        $( "#chromeExtension" ).remove();
+    }
+    if (isMobile){
+
+       $(".app-menu").remove();
     }
 
   </script>
