--- a/templates/activities/task_show.html
+++ b/templates/activities/task_show.html
@@ -144,7 +144,7 @@
             <h2 class="page-title showTaskTitle" ng-class="{task_closed: task.status=='closed'}">
 
 
-    <span editable-text="task.title"  ng-model='task.title'  onbeforesave="inlinePatch('Task','', 'title',task.entityKey,$data)">
+    <span editable-text="task.title"  ng-model='task.title'  onbeforesave="inlinePatch('Task','', 'title',task,$data)">
 
 
               <%=task.title%>
