--- a/templates/discovers/discover_list.html
+++ b/templates/discovers/discover_list.html
@@ -182,11 +182,11 @@
                 <span>
                   <%=fromNow(lead.updated_at)%>
                 </span>
-                <a href="/#/discovers/show/topic-qbic qatar" ng-click="details_of_tweets(tweet.id)" target="new">
-                <span class="contact-title ng-binding">
-                  RT @Ayshaalm: @QBICqa excited AMAC challenge started kickoff frm QBIC here at Qtr in partnership with @OoredooQatar #ooredoogoup http://t.c…
+                    <a href="/#/discovers/show/<%= tweet.id %>topic-<%=tweet.topic %>" ng-click="details_of_tweets(tweet.id)" target="new" >
+                <span  class="contact-title" >
+                  <%= tweet.content %>
                 </span>
-                </a>
+                </a> 
               </div>
           <a class="pull-right" href="https://twitter.com/TwitterAds/status/398826034499698688" data-datetime="2013-11-08T14:55:11+0000" data-scribe="element:full_timestamp"><time pubdate="" class="dt-updated" datetime="2013-11-08T14:55:11+0000" title="Time posted: 08 Nov 2013, 14:55:11 (UTC)">5:55 PM - 8 Nov 2013</time></a>
               <div class="clearfix"></div>
