--- a/templates/admin/settings/settings.html
+++ b/templates/admin/settings/settings.html
@@ -46,7 +46,7 @@
   </div>
   <div  class="row">
     <div class="col-md-9">
-     <input type="hidden" value="{{user.emailSignature}}" id="signature"/>
+     <input type="hidden" value="{{user.emailSignature |e}}" id="signature"/>
       <div class="row">
         <div class="showPage custom-show margin-bottom-15  col-md-12">
           <div class="row margin-bottom-10">
